example/pages/index.css
.readme .markdown-body {

    max-width: 736px;
    padding: 0 36px;
    line-height: 1.5;
    background-color: #fff;

}

 /* stylelint-disable */
.readme .markdown-body ::v-deep pre code .hljs-comment,
.readme .markdown-body ::v-deep pre code .hljs-attr,
.readme .markdown-body ::v-deep pre code .hljs-built_in,
.readme .markdown-body ::v-deep pre code .hljs-variable,
.readme .markdown-body ::v-deep pre code .hljs-quote {

    color: #900;

}
 /* stylelint-enable */

.readme .markdown-body ::v-deep pre code .hljs-number,
.readme .markdown-body ::v-deep pre code .hljs-literal,
.readme .markdown-body ::v-deep pre code .hljs-tag .hljs-attr {

    color: #035e21;

}

.readme .markdown-body ::v-deep pre code {

    max-width: none;

}

.readme .markdown-body > section > p:nth-child(2) {

    min-height: 30px;
    font-size: 0;

}

.readme .markdown-body > section > p:nth-child(2) > a {

    display: inline-block;
    margin: 2px 1px;

}

